fix(scroll-to-top): fix scroll-to-top button visibility

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,6 +8,7 @@
   --fs: 18px;
   --font: "IBM Plex Sans", "Open Sans", "Helvetica Now Display DW", sans-serif;
   --fg: #242933;
+  --fg-rgb: 36, 41, 51;
   --bg: #e8ebed;
   --fg-secondary: #6e7a91;
 
